--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,7 @@ repositories {
 }
 
 dependencies {
+    compile 'com.squareup:javapoet:1.8.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
