--- a/build.gradle
+++ b/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     compile 'com.squareup:javapoet:1.8.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.6.2'
 }
