Add JavaDoc building to the GitHub Actions build.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,4 +25,4 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
 
       - name: Build and test the project
-        run: ./gradlew build
+        run: ./gradlew build javadoc
