--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,12 +3,25 @@ name: Build
 on: [push, pull_request]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [ 8, 9, 11, 17 ]
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Build and test the project
+        env:
+          JAVA_VERSION: ${{ matrix.version }}
+        run: ./gradlew check javadoc
   build:
     runs-on: ubuntu-latest
-    env:
-      # disable the demon, as it's causing some problems
-      GRADLE_OPTS: -Dorg.gradle.daemon=false
-
     steps:
       - uses: actions/checkout@v2
 
