--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+plugins {
+    id 'java'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
+    id 'signing'
+    id 'maven'
+}
+
 group 'cc.jilt' // we need a domain we own for Maven Central, and jilt.org is scalped
 version '1.1'
 
@@ -22,14 +29,9 @@ shadowJar {
     configurations = [project.configurations.compileClasspath]
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
+java {
+    withSourcesJar()
+    withJavadocJar()
 }
 
 artifacts {
@@ -73,7 +75,7 @@ uploadArchives {
                 licenses {
                     license {
                         name 'The Apache License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        url 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                     }
                 }
 
@@ -91,46 +93,20 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility = '1.6'
-targetCompatibility = '1.6'
-
-compileJava {
-    options.compilerArgs << "-s"
-    options.compilerArgs << "$projectDir/src/main/generated/java"
-
-    doFirst {
-        // make sure that directory exists
-        file(new File(projectDir, "/src/main/generated/java")).mkdirs()
+if (System.getenv('JAVA_VERSION') != null) {
+    tasks.compileJava {
+        javaCompiler.set(javaToolchains.compilerFor { languageVersion.set(JavaLanguageVersion.of(8)) })
     }
-}
-
-compileTestJava {
-    options.compilerArgs << "-s"
-    options.compilerArgs << "$projectDir/src/test/generated/java"
-
-    doFirst {
-        // make sure that directory exists
-        file(new File(projectDir, "/src/test/generated/java")).mkdirs()
+    tasks.compileTestJava {
+        javaCompiler.set(javaToolchains.compilerFor { languageVersion.set(JavaLanguageVersion.of(System.getenv('JAVA_VERSION').toInteger())) })
     }
-}
-
-clean.doLast {
-    // clean-up directory when necessary
-    file(new File(projectDir, "/src/main/generated/java")).deleteDir()
-    file(new File(projectDir, "/src/test/generated/java")).deleteDir()
-}
-
-sourceSets {
-    main {
-        java {
-            srcDir "$projectDir/src/main/generated/java"
-        }
+    tasks.test {
+        javaLauncher.set(javaToolchains.launcherFor { languageVersion.set(JavaLanguageVersion.of(System.getenv('JAVA_VERSION').toInteger())) })
     }
-
-    test {
-        java {
-            srcDir "$projectDir/src/test/generated/java"
-        }
+} else {
+    java {
+        sourceCompatibility = '1.6'
+        targetCompatibility = '1.6'
     }
 }
 
@@ -140,4 +116,6 @@ dependencies {
     testCompileOnly 'com.squareup:javapoet:1.8.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.6.2'
+    testAnnotationProcessor(getProject())
+    testAnnotationProcessor('com.squareup:javapoet:1.8.0')
 }
