--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,10 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: ${{ matrix.version }}
 
       - name: Cache Gradle packages
         uses: actions/cache@v2
@@ -24,6 +24,4 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
 
       - name: Build and test the project
-        env:
-          JAVA_VERSION: ${{ matrix.version }}
         run: ./gradlew check javadoc
