--- a/build.gradle
+++ b/build.gradle
@@ -86,7 +86,7 @@ dependencies {
     compileOnly 'com.squareup:javapoet:1.8.0'
 
     testCompileOnly 'com.squareup:javapoet:1.8.0'
-    testCompile group: 'junit', name: 'junit', version: '4.13.2'
+    testCompile 'junit:junit:4.13.2'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.6.2'
     testAnnotationProcessor(getProject())
     testAnnotationProcessor('com.squareup:javapoet:1.8.0')
