--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK
+      - name: Set up JDK version ${{ matrix.version }}
         uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.version }}
