Add support for Java 9+ (#7)
The annotation `javax.annotation.Generated`, placed on the generated classes,
has been removed from the JDK libraries in Java 9 and higher,
and requires a separate dependency declaration.
Its replacement is `javax.annotation.processing.Generated`.
To support both Java below 9, including 8,
and Java 9+, dynamically determine which `@Generated` annotation to use with `Class.forName()`.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,17 +5,16 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      # disable the demon, as it's causing some problems
-      GRADLE_OPTS: -Dorg.gradle.daemon=false
-
+    strategy:
+      matrix:
+        version: [ 8, 9, 11 ]
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK version ${{ matrix.version }}
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: ${{ matrix.version }}
 
       - name: Cache Gradle packages
         uses: actions/cache@v2
