Make the Gradle 'build' task work again without a valid PGP key set.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,4 +24,4 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
 
       - name: Build and test the project
-        run: ./gradlew check javadoc
+        run: ./gradlew build
