--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ signing {
 // turn off signing unless we're uploading archives to Maven Central,
 // as it will fail if a valid PGP key is not set
 tasks.withType(Sign).configureEach {
-    onlyIf { gradle.taskGraph.hasTask("uploadArchives") }
+    onlyIf { project.hasProperty('publishToMavenCentral') }
 }
 
 // defaults if the value of the username and password for Maven Central is not found -
