Looks like the Shadow plugin doesn't support Java 21 yet - downgrade source compatibility to Java 17 when building with JDKs newer than 11.

--- a/build.gradle
+++ b/build.gradle
@@ -86,8 +86,8 @@ if (JavaVersion.current() <= JavaVersion.VERSION_11) {
     sourceCompatibility = JavaVersion.VERSION_1_6
     targetCompatibility = JavaVersion.VERSION_1_6
 } else {
-    sourceCompatibility = JavaVersion.current()
-    targetCompatibility = JavaVersion.current()
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 dependencies {
