--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ publishing {
 
             pom {
                 name = 'Jilt'
-                description = 'Java annotation processor for auto-generating Builder (including Type-Safe Builder) classes'
+                description = 'Java annotation processor for auto-generating Builder (including Staged Builder) pattern classes'
                 url = 'https://github.com/skinny85/jilt'
 
                 scm {
