Fix a bug where JSpecify Nullable annotations were not recognized.

--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.assertj:assertj-core:3.6.2'
     testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
+    testImplementation 'org.jspecify:jspecify:0.3.0'
     testAnnotationProcessor project
 }
 // required in Gradle 8, since the above line 'testAnnotationProcessor project'
