Fix an error where an annotation with 'parameter' and 'type use' Targets was copied twice in the generated setter

--- a/build.gradle
+++ b/build.gradle
@@ -87,9 +87,7 @@ repositories {
 if (JavaVersion.current() <= JavaVersion.VERSION_11) {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
-    sourceSets.test.java.exclude '**/Optional*.java',
-            '**/Record*.java',
-            '**/JSpecify*.java'
+    sourceSets.test.java.exclude '**/Record*.java', '**/JSpecify*.java'
 } else {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
