Correctly handle type use-only annotations on parameters (#32)

--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,10 @@ repositories {
     mavenCentral()
 }
 
+if (JavaVersion.current() <= JavaVersion.VERSION_1_8) {
+    sourceSets.test.java.exclude '**/AnnotationPosition*.java'
+}
+
 if (JavaVersion.current() <= JavaVersion.VERSION_11) {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
@@ -97,7 +101,7 @@ if (JavaVersion.current() <= JavaVersion.VERSION_11) {
 }
 
 dependencies {
-    compileOnly 'com.squareup:javapoet:1.8.0'
+    compileOnly 'com.squareup:javapoet:1.13.0'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.assertj:assertj-core:3.6.2'
