Adds support for @ToBuilder with @Getter and @Data

--- a/build.gradle
+++ b/build.gradle
@@ -99,14 +99,26 @@ if (JavaVersion.current() < JavaVersion.VERSION_17) {
 
 dependencies {
     compileOnly 'com.squareup:javapoet:1.13.0'
+    compileOnly 'org.projectlombok:lombok:1.18.38'
+
+    annotationProcessor 'org.projectlombok:lombok:1.18.38'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.assertj:assertj-core:3.6.2'
     testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.38'
+
     testAnnotationProcessor project
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'
 }
 // required in Gradle 8, since the above line 'testAnnotationProcessor project'
 // creates an implicit dependency on shadowJar from compileTestJava
 tasks.named('compileTestJava').configure {
     it.dependsOn(tasks.named('shadowJar'))
+}
+// required to overcome the error:
+// Could not instantiate annotation processor 'lombok.launch.AnnotationProcessorHider$AnnotationProcessor'
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
 }
