--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,4 +20,4 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Build and test the project
-        run: ./gradlew build
+        run: ./gradlew check
