--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [ 8, 9, 11, 17, 21 ]
+        version: [8, 9, 11, 17, 21, 25]
     steps:
       - uses: actions/checkout@v2
 
