--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-java@v5
         with:
           java-version: ${{ matrix.version }}
+          distribution: 'oracle'
 
       - name: Cache Gradle packages
         uses: gradle/actions/setup-gradle@v4
