Update Dependabot to target the 'develop' branch

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,8 +5,10 @@ updates:
     schedule:
       interval: weekly
       day: sunday
+    target-branch: develop
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: weekly
       day: sunday
+    target-branch: develop
